fix(lightbox): fix a11y color contrast on the close button
DSW-198

--- a/packages/lumx-core/src/scss/components/lightbox/_index.scss
+++ b/packages/lumx-core/src/scss/components/lightbox/_index.scss
@@ -35,6 +35,7 @@
         position: fixed;
         top: $lumx-spacing-unit * 3;
         right: $lumx-spacing-unit * 3;
+        z-index: 1;
     }
 
     &__wrapper {
